--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,22 @@
 ---
 galaxy_info:
-  author: Insert author(s) here
-  description: Insert description here
+  author: haslersn
+  description: keepalived; see https://github.com/acassen/keepalived
   company: stuvus (https://stuvus.uni-stuttgart.de)
 
-  license: CC-BY-SA
+  license: MIT
 
   min_ansible_version: 2.5
 
   platforms:
     - name: Debian
       versions:
-        - stretch
+        - buster
 
   galaxy_tags:
-    - Insert ansible galaxy tags here
+    - keepalived
+    - failover
+    - network
+    - dynamic
 
 dependencies: []
